<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/personDetailScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/firstname"
                android:textColor="#ff707070"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textFirstName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_first_name"
                android:inputType="textPersonName"
                android:textColor="#ff222222"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/lastname"
                android:textColor="#ff707070"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textLastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_last_name"
                android:inputType="textPersonName"
                android:textColor="#ff222222"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/birthday"
                android:textColor="#ff707070"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/textBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_birth"
                android:inputType="textMultiLine|textAutoCorrect"
                android:textColor="#ff222222"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>